--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^10.14.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
