--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jiraa",
+  "name": "jira",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,8 +8,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^5.1.1",
-    "antd": "^5.21.3",
-    "firebase": "^10.14.1",
+    "antd": "^5.21.2",
+    "firebase": "^10.14.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -17,6 +17,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "tinymce": "^7.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
